# HandsOnMachineLearningWithScikitLearn-TensorFlow

./: .gitignore  README.md  pyproject.toml
part1/: Housing.ipynb
